--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,16 @@
+
 cmake_minimum_required(VERSION 3.2)
 
 project(helloworld VERSION 0.0.$ENV{GITHUB_RUN_NUMBER})
-#find_package(Boost COMPONENTS unit_test_framework REQUIRED)
+find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 configure_file(version.h.in version.h)
 
 add_executable(helloworld_cli main.cpp)
 add_library(helloworld lib.cpp)
-#add_executable(test_version test_version.cpp)
+add_executable(test_version test_version.cpp)
 
-set_target_properties(helloworld_cli helloworld  PROPERTIES
+set_target_properties(helloworld_cli helloworld test_version PROPERTIES
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON
 )
@@ -17,11 +18,19 @@ target_include_directories(helloworld
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
 
+set_target_properties(test_version PROPERTIES
+    COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
+    INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
+)
 
 target_link_libraries(helloworld_cli PRIVATE
     helloworld
 )
 
+target_link_libraries(test_version
+    ${Boost_LIBRARIES}
+    helloworld
+)
 
 if (MSVC)
     target_compile_options(helloworld_cli PRIVATE
@@ -30,11 +39,17 @@ if (MSVC)
     target_compile_options(helloworld PRIVATE
         /W4
     )
+    target_compile_options(test_version PRIVATE
+        /W4
+    )
 else ()
     target_compile_options(helloworld_cli PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
     target_compile_options(helloworld PRIVATE
+        -Wall -Wextra -pedantic -Werror
+    )
+    target_compile_options(test_version PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
 endif()
@@ -52,6 +67,6 @@ set(CPACK_PACKAGE_CONTACT example@example.com)
 
 include(CPack)
 
-#enable_testing()
+enable_testing()
 
-#add_test(test_version test_version)
+add_test(test_version test_version)
