--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
       - run: cmake .
       - run: cmake --build .
-      #- run: cmake --build . --target test
+      - run: cmake --build . --target test
       - run: cmake --build . --target package
       - name: Create Release
         id: create_release
