--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
       - run: cmake --build .
       - run: cmake --build . --target test
       - run: cmake --build . --target package
+      - run: cat ip_filter.tsv | ip_filter | md5sum 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
